exports[`test renders ActivityIndicator 1`] = `
<View>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "marginBottom": 20,
        "marginTop": 10,
      }
    } />
  <View
    style={Object {}}>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginBottom": 10,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            undefined,
          ]
        }>
        31/12/1969
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "flex-end",
          "backgroundColor": "#FAF6F1",
          "borderRadius": 4,
          "marginBottom": 10,
          "padding": 10,
          "width": 562.5,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#807F7F",
            },
          ]
        }>
        Foo
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "alignSelf": "flex-end",
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
        21:01
      </Text>
    </View>
  </View>
  <View
    style={Object {}}>
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "backgroundColor": "#EFEDED",
          "borderRadius": 4,
          "marginBottom": 10,
          "padding": 10,
          "width": 562.5,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#807F7F",
            },
          ]
        }>
        Bar
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "alignSelf": "flex-end",
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
        21:01
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders correctly 1`] = `
<View>
  <View
    style={Object {}}>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginBottom": 10,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            undefined,
          ]
        }>
        31/12/1969
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "flex-end",
          "backgroundColor": "#FAF6F1",
          "borderRadius": 4,
          "marginBottom": 10,
          "padding": 10,
          "width": 562.5,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#807F7F",
            },
          ]
        }>
        Foo
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "alignSelf": "flex-end",
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
        21:01
      </Text>
    </View>
  </View>
  <View
    style={Object {}}>
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "backgroundColor": "#EFEDED",
          "borderRadius": 4,
          "marginBottom": 10,
          "padding": 10,
          "width": 562.5,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#807F7F",
            },
          ]
        }>
        Bar
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "alignSelf": "flex-end",
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
        21:01
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders load more button 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#654C50",
            },
            Array [
              Object {
                "marginBottom": 20,
                "marginTop": 10,
                "textAlign": "center",
              },
              undefined,
            ],
          ],
        ]
      }>
      Carregar mais
    </Text>
  </View>
  <View
    style={Object {}}>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginBottom": 10,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            undefined,
          ]
        }>
        31/12/1969
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "flex-end",
          "backgroundColor": "#FAF6F1",
          "borderRadius": 4,
          "marginBottom": 10,
          "padding": 10,
          "width": 562.5,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#807F7F",
            },
          ]
        }>
        Foo
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "alignSelf": "flex-end",
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
        21:01
      </Text>
    </View>
  </View>
  <View
    style={Object {}}>
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "backgroundColor": "#EFEDED",
          "borderRadius": 4,
          "marginBottom": 10,
          "padding": 10,
          "width": 562.5,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#807F7F",
            },
          ]
        }>
        Bar
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "alignSelf": "flex-end",
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
        21:01
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders without messages 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#EFEDED",
        "borderRadius": 4,
        "padding": 10,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#807F7F",
          },
        ]
      }>
      Apresente-se, diga os cuidados e informações sobre seu objeto, combine data de entrega, devolução e local de encontro. Um número de telefone para imprevistos vai bem :)
    </Text>
  </View>
</View>
`;
